# vtkModeling

./: CMakeLists.txt  README.md  README.txt
Filters/LaplacianSurface/: CMakeLists.txt  LaplacianSurface.xml  vtkLaplacianSurface.cpp  vtkLaplacianSurface.h
Filters/MassSpring/: CMakeLists.txt  Distance.cpp  MassSpring.xml  vtkMassSpring.cpp  vtkMassSpring.h
Filters/MeshLess/: .vtkMeshLess.cpp.kate-swp  CMakeLists.txt  MeshLess.xml  vtkMeshLess.cpp  vtkMeshLess.h
Filters/MovingLeastSquare/: CMakeLists.txt  MovingLeastSquare.xml  vtkMovingLeastSquare.cpp  vtkMovingLeastSquare.h
common/: matrix.h  utils.h
include/: VectorMath.h  matrix.h
lse_vtk/: CMakeLists.txt  test_LS.cpp  vtkLaplacianSurface.cpp  vtkLaplacianSurface.h
meshless_vtk/: CMakeLists.txt  test_meshless.cpp  vtkMeshLess.cpp  vtkMeshLess.h
mls_vtk/: CMakeLists.txt  vtkMovingLeastSquare.cpp  vtkMovingLeastSquare.h
mss_vtk/: CMakeLists.txt  Distance.cpp  Distance.h  VectorMath.h  vtkMassSpring.cpp  vtkMassSpring.h
python/: lsetest.py  lsotest.py  meshlesstest.py  mlstest.py  msstest.py
python/lse/: sphere.vtk
python/lso/: LV_boundary.vtk  LV_lso.vtk
python/mls/: mesh.vtk
python/mssAnimation/: cube.ugrid  mssAnimation.py
python/vtkExtend/: __init__.py  __wrapped_classes.py  example_meshes.py  info.py  info.template.py  misc.py
test/: LaplacianSurface.pvsm  MassSpring.pvsm  MeshLess.pvsm  MovingLeastSquare.pvsm
